
-------------------------------- Release 4.0.1 --------------------------------

Release date: June 2012

This is a bug fix release. Apart various minor fixes in the documentation, the
following has been changed since CGAL-4.0:


* 2D Voronoi Diagram Adaptor (re-added)

  - The package 2D Voronoi Diagram Adaptor was temporarily removed from the
    CGAL distribution because of license issues. That package is now back into
    CGAL.


* 2D and 3D Geometry Kernel

  - Fix a bug in the Segment_3-Triangle_3 intersection function in the case the
    segment is collinear with a triangle edge.


* Algebraic Kernel

  - Avoid the linking error "duplicate symbols" when two compilation units
    using the algebraic kernel are linked.


* 3D Boolean Operations on Nef Polygons Embedded on the Sphere

  - Fix a memory leak due to the usage of an internal mechanism that has been
    replaced by boost::any. This also influences the packages 2D Boolean
    Operations on Nef Polygons, 3D Boolean Operations on Nef Polyhedra, Convex
    Decomposition of Polyhedra, and 3D Minkowski Sum of Polyhedra.


* 2D Arrangement

  - Fix several memory leaks.


* 2D Mesh Generation

  - Fix a compilation error in the header <CGAL/Mesh_2/Do_not_refine_edges.h>
    when g++ version 4.7 is used.


* Surface Mesh Generation and 3D Mesh Generation

  - Fix an important bug in the CGAL_ImageIO library, that could lead to wrong
    result when meshing from a 3D image.

  - Fix the compilation of the demo in demo/Surface_mesher, when Boost version
    1.48 or 1.49 is used.


* Surface Mesh Parameterization

  - Fix a memory leak.

  - Fix a compatibility issue with Eigen-3.1 of Eigen_solver_traits. This fix
    also affects the usage of that class in the package Surface Reconstruction
    from Point Sets.


-------------------------------- Release 4.0 --------------------------------

Release date: March 2012

CGAL 4.0 offers the following improvements and new functionality :


* License Changes