@@ -259,9 +259,13 @@ else()
     # it is for example "I" or "Ic"):
     if(NOT CGAL_BUGFIX_VERSION GREATER 0 AND NOT CGAL_BUGFIX_VERSION EQUAL 0)
       set(CGAL_BUGFIX_VERSION 0)
-      list( GET CGAL_VERSION_TOKENS 3 CGAL_BUILD_VERSION )
+      if( CGAL_VERSION_TOKENS_LEN GREATER 3 )
+        list( GET CGAL_VERSION_TOKENS 3 CGAL_BUILD_VERSION )
+      endif()
     else()
-      list( GET CGAL_VERSION_TOKENS 4 CGAL_BUILD_VERSION )
+      if( CGAL_VERSION_TOKENS_LEN GREATER 4 )
+        list( GET CGAL_VERSION_TOKENS 4 CGAL_BUILD_VERSION )
+      endif()
     endif()
     # If CGAL_BUILD_VERSION is not a strictly positive number, error
     if(NOT CGAL_BUILD_VERSION GREATER 0)
