@@ -46,6 +46,6 @@ The empty bibliography.
 <div class="NavAddress">
 <SMALL><a href="http://www.cgal.org" target="_top">CGAL Open Source Project</a>.
 Separate Build.
-2 July 2012.</SMALL>
+4 July 2012.</SMALL>
 </div>
 </body>  </html>
