@@ -36,7 +36,7 @@
 <CENTER><BIG><BIG>Separate Build</BIG></BIG></CENTER>
 <P>
 
-<CENTER><BIG><BIG> 2 July 2012</BIG></BIG></CENTER>
+<CENTER><BIG><BIG> 4 July 2012</BIG></BIG></CENTER>
 
   <div class="NavBottom">
   
@@ -52,6 +52,6 @@
 <div class="NavAddress">
 <SMALL><a href="http://www.cgal.org" target="_top">CGAL Open Source Project</a>.
 Separate Build.
-2 July 2012.</SMALL>
+4 July 2012.</SMALL>
 </div>
 </body>  </html>
